objects/Model_Sub_Category_Definition__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_Category_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model Category Definition</label>
        <referenceTo>Model_Category_Definition__c</referenceTo>
        <relationshipLabel>Model Sub Category Definitions</relationshipLabel>
        <relationshipName>Model_Sub_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score_Guidance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Score Guidance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Category_Score__c</fullName>
        <label>Sub Category Score</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Category_Weight__c</fullName>
        <label>Sub Category Weight</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Model Sub Category Definition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Model Sub Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Model Sub Category Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>